--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta name="generator" content="HTML Tidy for HTML5 (experimental) for Windows https://github.com/w3c/tidy-html5/tree/c63cc39">
-        <title></title>
-    </head>
-    <body>
-        <h1>
-            Help
-        </h1>
-        <p>
-            Get help on the Ruby on Rails Tutorial at the <a href="http://railstutorial.org/help">Rails Tutorial help page</a>. To get help on this sample app, see the <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
-        </p>
-    </body>
-</html>
+<% provide(:title, 'Help') %>
+<h1>
+    Help
+</h1>
+<p>
+    Get help on the Ruby on Rails Tutorial at the <a href="http://railstutorial.org/help">Rails Tutorial help page</a>. To get help on this sample app, see the <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+</p>
